# .flow

./: .gitignore  Cargo.toml  FORMAT.md  TESTING.md  data.flow  demo.flow
benchmark.flowtype/: 1743292800000.flow  1743296400000.flow  1743300000000.flow  1743303600000.flow  manifest.json
src/: block.rs  compression.rs  event.rs  format.rs  lib.rs  main.rs  operations.rs  reader.rs  recovery.rs  schema.rs  segmented_reader.rs  segmented_writer.rs  store.rs  writer.rs
tests/: integration.rs  operations.rs  schema.rs  segmented.rs
