[package]
name = "dotflow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dotflow"
path = "src/main.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "compact"
path = "src/bin/compact.rs"

[[bin]]
name = "http_bench"
path = "src/bin/http_bench.rs"

[dependencies]
crc32c = "0.6.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zstd = "0.13"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
